<resources>
    <string name="app_name">Weltec Note Sharing</string>
    <string name="username">Username</string>
    <string name="uemail">Username/Email</string>
    <string name="password">Password</string>
    <string name="publish">Publish</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="email">Email</string>
    <string name="author">Author</string>
    <string name="date_created">Date Created</string>
    <string name="body">Body</string>
    <string name="change_password">Change Password</string>
    <string name="delete_account">Delete Account</string>
</resources>