<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup"
    android:background="@drawable/background">

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/app_name"
        />

    <EditText
        android:id="@+id/txt_username"
        android:layout_centerInParent="true"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/username"
        />

    <ImageView
        android:id="@+id/img_email"
        android:src="@drawable/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_toLeftOf="@+id/txt_email"
        />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:hint="@string/email"
        android:layout_below="@id/txt_username"
        />


    <EditText
        android:id="@+id/txt_password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_email"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        />

    <EditText
        android:id="@+id/txt_password_confirm"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_password"
        android:inputType="textPassword"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:hint="@string/password"
        />

    <ImageView
        android:id="@+id/img_signup"
        android:src="@drawable/signup"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/txt_password_confirm"
        />

    <ImageView
        android:id="@+id/img_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/username"
        android:layout_toLeftOf="@id/txt_username"
        android:layout_marginTop="350dp"
        />

    <ImageView
        android:id="@+id/img_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/password"
        android:layout_toLeftOf="@id/txt_password"
        android:layout_marginTop="450dp"
        />

    <ImageView
        android:id="@+id/img_password_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/password"
        android:layout_toLeftOf="@id/txt_password"
        android:layout_marginTop="500dp"
        />

</RelativeLayout>